restruct: for nightly build

--- a/QuickLook.Plugin.Metadata.config
+++ b/QuickLook.Plugin.Metadata.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Metadata>
   <Namespace>QuickLook.Plugin.MarkmapViewer</Namespace>
-  <Version>v1.0.0-1-g8de7c34</Version>
+  <Version>1.0.1</Version>
   <Description>View the markmap files.</Description>
 </Metadata>
